add some open graph tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trying Vue.js</title>
+    <title>YATTA</title>
+    <meta property="og:title" content="YATTA YATTA YATTA" />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/950419351956234280/968216411614896239/genshin-impact-yae-miko1.gif" />
+    <meta name="theme-color" content="#ff99cc" />
   </head>
   <body>
     <div id="app"></div>
