--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YATTA</title>
-    <meta property="og:title" content="YATTA YATTA YATTA" />
+    <meta property="og:title" content="YATTA YATTA YATTA YATTA YATTA" />
     <meta property="og:image" content="https://media.discordapp.net/attachments/950419351956234280/968216411614896239/genshin-impact-yae-miko1.gif" />
     <meta name="theme-color" content="#ff99cc" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="YATTA YATTA YATTA YATTA YATTA" />
+    <meta name="twitter:description" content="Did you ever hear the tragedy of Darth Plagueis The Wise? I thought not. It’s not a story the Jedi would tell you. It’s a Sith legend. Darth Plagueis was a Dark Lord of the Sith, so powerful..." />
+    <meta name="twitter:image" content="https://media.discordapp.net/attachments/950419351956234280/968216411614896239/genshin-impact-yae-miko1.gif" />
   </head>
   <body>
     <div id="app"></div>
