--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YATTA YATTA YATTA YATTA YATTA</title>
+    <title>OwO YATTA YATTA YATTA YATTA YATTA</title>
     <meta property="og:title" content="YATTA YATTA YATTA YATTA YATTA" />
     <meta property="og:image" content="https://media.discordapp.net/attachments/950419351956234280/968216411614896239/genshin-impact-yae-miko1.gif" />
     <meta name="theme-color" content="#ff99cc" />
