--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: https://ogp.me/ns#">
+<html lang="en" prefix="og: https://ogp.me/ns#" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -13,7 +13,7 @@
     <meta name="twitter:description" content="Did you ever hear the tragedy of Darth Plagueis The Wise? I thought not. It’s not a story the Jedi would tell you. It’s a Sith legend. Darth Plagueis was a Dark Lord of the Sith, so powerful..." />
     <meta name="twitter:image" content="https://media.discordapp.net/attachments/950419351956234280/968216411614896239/genshin-impact-yae-miko1.gif" />
   </head>
-  <body>
+  <body class="antialiased dark:bg-slate-900 dark:text-slate-400">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
