update title and other meta

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OwO YATTA YATTA YATTA YATTA YATTA</title>
-    <meta property="og:title" content="YATTA YATTA YATTA YATTA YATTA" />
+    <title>GENSHIN.ZENLESS.CLUB</title>
+    <meta property="og:title" content="GENSHIN.ZENLESS.CLUB" />
     <meta property="og:image" content="https://media.discordapp.net/attachments/950419351956234280/968216411614896239/genshin-impact-yae-miko1.gif" />
-    <meta name="theme-color" content="#ff99cc" />
+    <meta name="theme-color" content="#8A2BE2" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="YATTA YATTA YATTA YATTA YATTA" />
+    <meta name="twitter:title" content="YGENSHIN.ZENLESS.CLUB" />
     <meta name="twitter:description" content="Did you ever hear the tragedy of Darth Plagueis The Wise? I thought not. It’s not a story the Jedi would tell you. It’s a Sith legend. Darth Plagueis was a Dark Lord of the Sith, so powerful..." />
     <meta name="twitter:image" content="https://media.discordapp.net/attachments/950419351956234280/968216411614896239/genshin-impact-yae-miko1.gif" />
   </head>
-  <body class="antialiased dark:bg-slate-900 dark:text-slate-300">
+  <body class="antialiased">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
